# Paper-Compass

./: .dockerignore  .gitignore  Dockerfile
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2859594b3330_initial_schema.py  a1b2c3d4e5f6_auth_and_pdf_storage.py  b2c3d4e5f6a7_drop_legacy_last_interaction.py  c3d4e5f6a7b8_match_verdict.py  d4e5f6a7b8c9_visual_quality.py  e5f6a7b8c9d0_thread_types.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  discover.py  evaluate.py  library.py  onboarding.py  papers.py  router.py  sections.py  stub_data.py  threads.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py
backend/app/models/: __init__.py  comprehension.py  evaluation.py  explanation.py  paper.py  section.py  thread.py  user.py  visual.py
backend/app/modules/comprehend/: explanation_service.py  thread_service.py
backend/app/modules/discover/: semantic_scholar.py  transform.py
backend/app/modules/evaluate/: service.py
backend/app/modules/ingestion/: grobid_client.py  service.py  tei_parser.py
backend/app/modules/llm/: client.py  response_parser.py
backend/app/modules/relevance/: __init__.py  agent.py  prompts.py
backend/app/modules/storage/: pdf_store.py
backend/app/modules/visuals/: __init__.py  generator.py  harness.py  prompts.py  renderer.py  types.py  (+1 more)
backend/app/schemas/: __init__.py  cited_paper.py  comprehension.py  discover.py  evaluation.py  paper.py  section.py  thread.py
backend/app/utils/: mappers.py  queries.py
(+51 files in other folders)
